# hangman

./: .gitignore  LICENSE  hangman.cabal
src/: Main.hs
