name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
description:         My first project
homepage:            https://github.com/kevinmungai/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Kevin Kamau
maintainer:          mungaikamau7@gmail.com
copyright:           Free
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
